--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <img
-      src="https://drive.google.com/uc?export=download&id=1_odsR1hacOPcuaqrO3euCve9LLMGD5s6"
+      src="https://raw.githubusercontent.com/boi-git/potential-tribble/refs/heads/main/assest/Asset%2014%404x.png"
       width="640"
       height="480"
       alt="Description of the image"
